# vagner_vasconcelos_embarcatech_HBr_2025

./: .gitignore  README.md
projetos/FreeRTOS/: CMakeLists.txt
projetos/FreeRTOS/include/: FreeRTOSConfig.h
projetos/FreeRTOS/src/: main.c
projetos/FreeRTOS_tarefa_RicardoVagner/: CMakeLists.txt  main.c
projetos/FreeRTOS_tarefa_RicardoVagner/.cache/clangd/index/: FreeRTOS.h.A2FB547BF8D5F46C.idx  FreeRTOSConfig.h.545D8074D555E3D8.idx  button_a.c.20447B97DC7610DB.idx  button_a.h.8308145FF576553C.idx  button_b.c.2421B27EF6D67F37.idx  button_b.h.52827F12BE7A1BE1.idx  button_j.c.6C306085A37BDCCE.idx  button_j.h.C24BCE019353831D.idx  config.h.9BA17ABB4CA8A31B.idx  croutine.c.AE9A098C6E4E1AEA.idx  croutine.h.490C4121F8C50F86.idx  ctrl.c.5DA7918897AD0DE9.idx  ctrl.h.19F47D0668375665.idx  deprecated_definitions.h.EE77E48DFA3B93BF.idx  display.c.689E8C32E1CCB94F.idx  display.h.E3BD4A7EAE4FC8EC.idx  display_gate.c.9BB4EB5E05C61891.idx  display_gate.h.4D1E2AE23DE09333.idx  event_groups.c.AFFF7EAEDAD172C8.idx  event_groups.h.AFA2B6C29852D9EF.idx  freertos_sdk_config.h.FA544C10976DEDB3.idx  heap_4.c.59EEBEAFCA9B92DB.idx  i2c.c.C34C7B27106A3464.idx  i2c.h.D1E37CBB33916BA1.idx  led_rgb.c.1BB9AFDE3D1B8159.idx  led_rgb.h.5EC825FD1BEEE825.idx  list.c.4C43245FFCC23E3B.idx  list.h.AA7BC5727D3F0040.idx  main.c.A5F7DDA5992DD61E.idx  mpu_wrappers.h.25EC0110FF0D0637.idx  port.c.F9B839B86554C3D5.idx  portable.h.B85CF3162FE54C35.idx  portmacro.h.407FD844D879BE64.idx  projdefs.h.606166834371A399.idx  queue.c.053A235FAAFA777F.idx  queue.h.C25AE96DD163A07C.idx  rp2040_config.h.34D3C71B6609DC3A.idx  semphr.h.089586162343527E.idx  ssd1306.h.9E6D5199E645220B.idx  ssd1306_font.h.46436CFB316053B7.idx  (+9 more)
projetos/FreeRTOS_tarefa_RicardoVagner/include/: button_a.h  button_b.h  button_j.h  config.h  ctrl.h  display_gate.h  led_rgb.h  util.h
projetos/FreeRTOS_tarefa_RicardoVagner/lib_ext/: ssd1306_font.h  ssd1306_i2c.c
projetos/FreeRTOS_tarefa_RicardoVagner/src/: README.md  button_a.c  button_b.c  button_j.c  ctrl.c  display_gate.c  led_rgb.c  util.c
projetos/FreeRTOS_tarefa_RicardoVagner/src/oled/: display.c  display.h  i2c.c  i2c.h
projetos/Tarefa_OLED_NEW/: CMakeLists.txt
projetos/Tarefa_OLED_NEW/.cache/clangd/index/: FreeRTOS.h.DDA5B53F2E4485B9.idx  FreeRTOSConfig.h.7F0E8F5BD594CCA3.idx  app_display.h.19932D55C61287C2.idx  croutine.c.D00CFED044F4ADA9.idx  croutine.h.6E2EA92C61037628.idx  deprecated_definitions.h.39992C38F1193AB9.idx  digitos_grandes_utils.c.8BCB815A9144E937.idx  digitos_grandes_utils.h.AFC07404AA846D92.idx  event_groups.c.F7253B7E404B1C2A.idx  event_groups.h.CABD47F32872069E.idx  freertos_sdk_config.h.55B6EF8AAD887915.idx  heap_4.c.AE5E3E16FFC91D72.idx  list.c.CEED5661B5CFEB6B.idx  list.h.4A5B1DED17C7E08D.idx  main.c.BED7AB7B8DA548FA.idx  mpu_wrappers.h.ECB1FF7EF5485625.idx  numeros_display.c.AD56559C0A97A5B3.idx  numeros_display.h.717DDD0314949138.idx  numeros_grandes.c.15DAFF5150D4AFB7.idx  numeros_grandes.h.329EEC2192524CEA.idx  oled_animacoes.c.E1C69EC1227A9817.idx  oled_animacoes.h.69E6A78D810CF8B0.idx  oled_display.c.8A5DE53D7C63C44D.idx  oled_display.h.359CD7A15681686B.idx  port.c.026002E86AA8176E.idx  (+28 more)
projetos/Tarefa_OLED_NEW/inc/: app_display.h  numeros_display.h  oled_display.h  pico_keypad4x4.h  ssd1306_font.h  ssd1306_text.h  tarefa_botao_a.h  tarefa_botao_b.h  tarefa_contador.h  tarefa_display.h  tarefa_teclado_edicao.h
projetos/Tarefa_OLED_NEW/src/: CMakeLists.txt  digitos_grandes_utils.c  main.c  numeros_display.c  numeros_grandes.c  oled_animacoes.c  oled_display.c  pico_keypad4x4.c  ssd1306_text.c  tarefa_botao_a.c  tarefa_botao_b.c  tarefa_contador.c  tarefa_display.c  tarefa_teclado_edicao.c
projetos/blink_estruturado/: .gitignore  CMakeLists.txt  README.md
projetos/blink_estruturado/app/: main.c
projetos/blink_estruturado/drivers/: led_embutido.c
projetos/blink_estruturado/hal/: hal_led.c
projetos/blink_estruturado/include/: hal_led.h  led_embutido.h
projetos/galton_board/: .gitignore  CMakeLists.txt  README.md  galton_board.c
projetos/galton_board/buid/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  galton_board.dis  galton_board.elf  galton_board.elf.map  galton_board.hex  galton_board.uf2
projetos/galton_board/buid/pico-sdk/: cmake_install.cmake
projetos/galton_board/src/: galton_board.c
projetos/mpu6500/: CMakeLists.txt
projetos/mpu6500/src/: main (Cópia).c  main_funcionando.c  scan_antonio.c  scan_main.c
projetos/pico-ssd1306-main/: CMakeLists.txt  example.c
projetos/seguranca_iot/: CMakeLists.txt  README.md
projetos/seguranca_iot/docs/: compilacao_seguranca_iot.txt
projetos/seguranca_iot/include/: lwipopts.h  mqtt_comm.h  wifi_conn.h  xor_cipher.h
projetos/seguranca_iot/src/: conecta_wifi.c  iot_security_lab.c  main.c  mqtt_comm.c  wifi_conn.c  xor_cipher.c
projetos/sintetizador_audio/: CMakeLists.txt
projetos/sintetizador_audio/src/: README  adc_1.c  adc_2.c  buzzer.c  dma_microphone.c  main.c  main_deepseek.c  main_nao_pisca.c  net.c
projetos/tinyML/: CMakeLists.txt
projetos/tinyML/inc/: FreeRTOSConfig.h  buffer_sensor.h  digito_teste.h  digitos_grandes_utils.h  digitos_medios_utils.h  display_oled.h  exibicao.h  handles_tarefas.h  i2c_config.h  leitura.h  leitura_sensor.h  mpu.h  mpu_calibracao.h  numeros_display.h  numeros_grandes.h  numeros_medios.h  oled_animacoes.h  oled_context.h  oled_display.h  sensor.h  sensores.h  ssd1306_font.h  ssd1306_text.h  tarefa_botao_a.h  tarefa_calibracao.h  tarefa_oled_ax.h  tarefa_oled_ay.h  tarefa_oled_az.h  tarefa_oled_gx.h  tarefa_oled_gy.h  tarefa_oled_gz.h  tarefa_oled_temp.h  tela_display.h
projetos/tinyML/src/: CMakeLists.txt  buffer_sensor.c  digito_teste.c  digitos_medios_utils.c  display_oled.c  i2c_config.c  leitura_sensor.c  main.c  mpu.c  mpu_calibracao.c  numeros_display.c  numeros_medios.c  oled_animacoes.c  oled_context.c  oled_display.c  ssd1306_text.c  tarefa_botao_a.c  tarefa_calibracao.c  tarefa_oled_ax.c  tarefa_oled_ay.c  tarefa_oled_az.c  tarefa_oled_gx.c  tarefa_oled_gy.c  tarefa_oled_gz.c  tarefa_oled_temp.c  tela_display.c
(+342 files in other folders)
